@@ -254,9 +254,12 @@ There are yet more modifiers for controlling the way \fBpcretest\fP
 operates.
 .P
 The \fB/+\fP modifier requests that as well as outputting the substring that
-matched the entire pattern, pcretest should in addition output the remainder of
-the subject string. This is useful for tests where the subject contains
-multiple copies of the same substring.
+matched the entire pattern, \fBpcretest\fP should in addition output the
+remainder of the subject string. This is useful for tests where the subject
+contains multiple copies of the same substring. If the \fB+\fP modifier appears
+twice, the same action is taken for captured substrings. In each case the 
+remainder is output on the following line with a plus character following the 
+capture number.
 .P
 The \fB/B\fP modifier is a debugging feature. It requests that \fBpcretest\fP
 output a representation of the compiled byte code after compilation. Normally
@@ -812,6 +815,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 02 July 2011
+Last updated: 11 July 2011
 Copyright (c) 1997-2011 University of Cambridge.
 .fi
